[tool.poetry]
name = "cephfs_layout_tool"
version = "0.1.0"
description = ""
authors = ["Peter Woodman"]

[tool.poetry.dependencies]
python = "^3.11"
xattr = "^0.10.0"
humanize = "^3.13.1"

[tool.poetry.dev-dependencies]
pylint = "^2.17"
mypy = "^1.2.0"
black = "^22.8.0"
flake8 = "^5.0.3"
isort = "^4.3.21"

[tool.poetry.scripts]
cephfs-layout-tool = "cephfs_layout_tool.migrate_pools:main"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
